<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNoteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog"
    android:backgroundTint="@color/lightGray">

    <ImageView
        android:id="@+id/imageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="What you like to do?"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageDeleteNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote" />

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/textDeleteNoteMessageTrash"-->
    <!--        android:layout_marginStart="@dimen/_8sdp"-->
    <!--        android:layout_marginTop="@dimen/_8sdp"-->
    <!--        android:layout_marginEnd="@dimen/_8sdp"-->
    <!--        android:gravity="center_vertical"-->
    <!--        android:includeFontPadding="false"-->
    <!--        android:paddingStart="@dimen/_8sdp"-->
    <!--        android:paddingEnd="@dimen/_8sdp"-->
    <!--        android:text="@string/you_can_either"-->
    <!--        android:textColor="@color/colorWhite"-->
    <!--        android:textSize="15sp"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textHeading">

        <TextView
            android:id="@+id/textDeleteNoteTrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/delete_note"
            android:textAllCaps="true"
            android:textColor="@color/colorDelete"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDeleteNoteMessageTrash" />

        <TextView
            android:id="@+id/textUndo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/undo"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textDeleteNoteTrash"
            app:layout_constraintTop_toBottomOf="@+id/textDeleteNoteMessageTrash" />

        <TextView
            android:id="@+id/textCancelTrash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/textUndo"
            app:layout_constraintTop_toBottomOf="@+id/textDeleteNoteMessageTrash"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>