<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/note_color"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:measureAllChildren="false"
            android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/imageColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/imageColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_10sdp"
                app:tint="@color/colorWhite" />
        </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor6"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_6" />

                <ImageView
                    android:id="@+id/imageColor6"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorWhite" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <View
                    android:id="@+id/viewColor7"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/background_note_color_7" />

                <ImageView
                    android:id="@+id/imageColor7"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:contentDescription="@string/app_name"
                    android:padding="@dimen/_10sdp"
                    app:tint="@color/colorWhite" />
            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>
    </LinearLayout>

    <TextView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/textAddImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_image"
        android:drawableLeft="@drawable/ic_image"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/colorIcons"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/add_image"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:background="?attr/selectableItemBackground"
        android:id="@+id/textAddUrl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_web_link"
        android:drawableLeft="@drawable/ic_web_link"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/colorIcons"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/add_web_link"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <TextView
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"
        android:id="@+id/textDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_delete"
        android:drawableLeft="@drawable/ic_delete"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/colorDelete"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/delete_note"
        android:textColor="@color/colorDelete"
        android:textSize="15sp" />
</LinearLayout>